# example-codes

append_binary_payload_to_script/: folder.tar  install_script.sh  pack.sh
example-cmake/example-1_hello-world/: CMakeLists.txt  hello_world.c
example-cmake/example-2_hierarchical-cmakelists/: CMakeLists.txt
example-cmake/example-2_hierarchical-cmakelists/src1/: CMakeLists.txt  foo.cpp
example-cmake/example-2_hierarchical-cmakelists/src2/: CMakeLists.txt  bar.cpp
example-cmake/example-3_static-lib-and-dynamic-lib/: CMakeLists.txt  main.cpp
example-cmake/example-3_static-lib-and-dynamic-lib/lib/: foo.cpp  foo.h
example-cmake/example-4_external_packages/: CMakeLists.txt  externallib.cpp
linux_ipc/pipe/: fifo.c  pipe.c
linux_ipc/signal/: signal.c
linux_ipc/socket/: .af_unix-tcp.c.swp  README  af_net-tcp.c  af_net-udp.c  af_unix-tcp.c
linux_ipc/sysV/: sysV_msq.c  sysV_sem.c  sysV_shm.c
